--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,23 +3,23 @@
     <div class="container">
         <div class="row">
             <div class="footer-col" id="more">
-                <h4>More</h4>
+                <h4>{{ MORE }}</h4>
                 <ul>
-                    <li><a href="#about">about me</a></li>
-                    <li><a href="#services">my services</a></li>
-                    <li><a href="#">privacy policy</a></li>
+                    <li><a href="#about">{{ ABOUT_ME }}</a></li>
+                    <li><a href="#skills">{{ MY_SKILLS }}</a></li>
+                    <li><a href="#">{{ PRIVACY_POLICY }}</a></li>
                 </ul>
             </div>
             <div class="footer-col">
-                <h4>Contact Me</h4>
+                <h4>{{ CONTACT_ME }}</h4>
                 <ul class="white">
-                    <li><span class="pi pi-phone"></span> 328.8321074</li>
-                    <li><span class="pi pi-envelope"></span> jean.sotamba@outlook.it</li>
+                    <li><span class="pi pi-phone"></span> {{ PHONE }}</li>
+                    <li><span class="pi pi-envelope"></span> {{ EMAIL }}</li>
                     <li><span></span></li>
                 </ul>
             </div>
             <div class="footer-col">
-                <h4>Follow Me</h4>
+                <h4>{{ FOLLOW_ME }}</h4>
                 <div class="social-links">
                     <a target="_blank" [href]="FACEBOOK"><i class="pi pi-facebook"></i></a>
                     <a target="_blank" [href]="INSTAGRAM"><i class="pi pi-instagram"></i></a>
