--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,19 +3,19 @@
     <nav class="flex items-center justify-between">
       <div class="left flex justify-right">
         <div>
-          <a href="#">Home</a><a href="#about">About</a><a href="#services">Services</a><a href="#">Blog</a>
-          <a href="#more">More</a>
+          <a href="#">{{ HOME }}</a><a href="#about">{{ ABOUT }}</a><a href="#skills">{{ SKILLS }}</a><a href="#">{{ BLOG }}</a>
+          <a href="#more">{{ MORE }}</a>
         </div>
       </div>
       <div class="right">
-        <button class="btn btn-primary">Contact</button>
+        <button class="btn btn-primary">{{ CONTACT }}</button>
       </div>
     </nav>
   </div>
   <!-- BREVE DESCRIZIONE -->
-  <div class="hero flex items-centre">
+  <div class="hero flex-description items-centre">
     <div class="left flex-1 circle-container">
-        <img src="../../assets/images/195909631_363330995218497_111724520252459733_n.jpg" class="circle-image" title="photo"/>
+        <img src="../../assets/images/profile.jpg" class="circle-image" title="profile_photo"/>
     </div>
     <div class="right flex-1">
         <h1>
@@ -23,12 +23,9 @@
             <span>Stack Developer</span>
         </h1>
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
-            illum nam nobis, minima laudantium fugit sequi nostrum quod impedit,
-            beatae necessitatibus praesentium optio labore nemo!
+            {{ SHORT_DESCRIPTION }}
         </p>
-        <div><button class="btn btn-secondary" (click)="openDialog()">DOWNLOAD CV</button></div>
-        <app-dialog-custom [title]="title"></app-dialog-custom>
+        <div><button class="btn btn-secondary white" (click)="openDialog()">{{ DOWNLOAD_CV }}</button></div>
     </div>
   </div>
 </header>
