--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -15,3 +15,28 @@
     color: #ffffff;
     transition: all 0.5s ease;
 }
+
+.resume-section {
+    background-color: rgba(255, 255, 255, 0.9);
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    margin-bottom: 30px;
+}
+
+.resume-section h2 {
+    border-bottom: 2px solid #007BFF;
+    padding-bottom: 10px;
+}
+
+.experience h3 {
+    margin-bottom: 5px;
+}
+
+.experience p {
+    margin-bottom: 2px;
+}
+
+.about-center{
+    text-align: center;
+}
