Update img path

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,7 +15,7 @@
   <!-- BREVE DESCRIZIONE -->
   <div class="hero flex-description items-centre">
     <div class="left flex-1 circle-container">
-        <img src="../../assets/images/profile.jpg" class="circle-image" title="profile_photo"/>
+        <img src="assets/images/profile.jpg" class="circle-image" title="profile_photo"/>
     </div>
     <div class="right flex-1">
         <h1>
