Update skills.component.html path icon changed

--- a/src/app/my-skills/skills.component.html
+++ b/src/app/my-skills/skills.component.html
@@ -4,17 +4,17 @@
         <p>All your digital needs... covered.</p>
         <div class="card-grid">
             <div class="card">
-                <img src="../../assets/icons/backend.png" />
+                <img src="assets/icons/backend.png" />
                 <h2>Backend</h2>
                 <p *ngFor="let skill of getBeSkill()">{{ skill }}</p>
             </div>
             <div class="card">
-                <img src="../../assets/icons/frontend.png" />
+                <img src="assets/icons/frontend.png" />
                 <h2>Frontend</h2>
                 <p *ngFor="let skill of getFeSkill()">{{ skill }}</p>
             </div>
             <div class="card">
-                <img src="../../assets/icons/db.png" />
+                <img src="assets/icons/db.png" />
                 <h2>Database</h2>
                 <p *ngFor="let skill of getDbSkill()">{{ skill }}</p>
             </div>
